syntax = "proto3";
package curioucity.v1alpha;

message Tag {
  string id = 1;
  string name = 2;
  string created_timestamp_at_curioucity = 3;
}